# server/src/main/java/fr/myhome/server/exception/CollectionNotExistException.java
@@ -1,0 +1,9 @@
+package fr.myhome.server.exception;
+
+public class CollectionNotExistException extends FunctionalException {
+
+    public CollectionNotExistException(Integer collectionId) {
+        super(String.format("The collection with the id : %d doesn't exist", collectionId));
+    }
+
+}
